make-a-wish-salesforce/src/objects/Minor_Participant__c.object
<CustomObject>
    <fields>
        <fullName>Associated_Childeren__c</fullName>
        <label>Associated Childeren</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttachmentId__c</fullName>
        <label>AttachmentId</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment_Title__c</fullName>
        <inlineHelpText>This field is used for storing a title of the uploaded document</inlineHelpText>
        <label>Attachment Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Minor Participants</relationshipLabel>
        <relationshipName>Minor_Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Combo_Chapter_Name__c</fullName>
        <formula>Case__r.Contact.Hidden_Chapter_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Combo Chapter Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>File_Path__c</fullName>
        <description>This field is used to store the file path for an attached document from FormTracker Dashboard page.</description>
        <label>File Path</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Form_Name__c</fullName>
        <label>Form Name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guardian_Name__c</fullName>
        <label>Guardian Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Combo_City__c</fullName>
        <label>Combo City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Combo_ContactId__c</fullName>
        <label>Combo Contact Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Combo_DOB__c</fullName>
        <label>Combo DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hidden_Combo_Email__c</fullName>
        <label>Combo Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Hidden_Combo_Envelop_Id__c</fullName>
        <label>Combo Envelop Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Combo_FirstName__c</fullName>
        <label>Combo First Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Combo_HomePhone__c</fullName>
        <label>Combo HomePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Hidden_Combo_LastName__c</fullName>
        <label>Combo LastName</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Combo_MiddleName__c</fullName>
        <label>Combo Middle Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Combo_MobilePhone__c</fullName>
        <label>Combo MobilePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Hidden_Combo_Participant__c</fullName>
        <label>Combo Participant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Combo_Relationship__c</fullName>
        <label>Combo Relationship</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Combo_State__c</fullName>
        <label>Combo State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Combo_Street__c</fullName>
        <label>Combo Street</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Combo_TelePhone__c</fullName>
        <label>Combo TelePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Hidden_Combo_Zipcode__c</fullName>
        <label>Combo Zipcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SelectedFormat__c</fullName>
        <label>SelectedFormat</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SignedDate__c</fullName>
        <label>SignedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Wish_Child_Name__c</fullName>
        <formula>Case__r.Contact.FirstName+&apos; &apos;+ Case__r.Contact.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wish Child Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hiddenFormat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>hiddenFormat</label>
        <type>Checkbox</type>
    </fields>
    <label>Minor Participant</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Minor Participant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Minor Participants</pluralLabel>
    <recordTypes>
        <fullName>Combo_Form_Attachment</fullName>
        <active>true</active>
        <label>Combo Form Attachment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Form_Tracker_Attachment</fullName>
        <active>true</active>
        <label>Form Tracker Attachment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Wish_Clarence_Attachment</fullName>
        <active>true</active>
        <label>Wish Clarence Attachment</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>